--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,127 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.App {
+  display: flex;
+  font-family: "Lato", sans-serif;
+
+}
+
+body {
+  background-color: #e8d5b7;
+  margin: 0;
+  font-family: "Lato", sans-serif;
+}
+
+.blog{
+  display: inline-block;
+  background-color: #e8d5b7;
+  max-height: 300px;
+}
+
+img {
+  width: 400px;
+  height: 450px;
+  border-radius: 5px;;
+}
+
+.categoryButtonSelected{
+  background-color: #e8d5b7;
+}
+
+.categoryButton:hover {
+  background-color: #555;
+  opacity: 0.5;
+  color: white;
+}
+
+.categoryButtonSelected:hover {
+  background-color: #5f9EA0;
+  color: white;
+}
+
+.categoryButton, .cart  {
+  cursor: pointer;
+  margin: 5px;
+  padding: 5px;
+  text-align: left;
+ 
+}
+
+.cart {
+  border-style: groove;
+  background-color: white;
+  border-radius: 2px;
+}
+
+.icon {
+  width: 20px;
+  height: 30px;
+
+}
+p, h1, h2, button {
+  font-family: 'Poppins', sans-serif;
+  font-size: 20px;
+}
+
+button {
+  background-color: #0e2431;
+  border: none;
+  color: white;
+  padding: 12px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 2px;
+}
+
+.gallery {
+  display: inline-block;
+  flex-wrap: wrap;
+  padding: 10px;
+  border-style: groove;
+  background-color: white;
+  text-align: left;
+  border-radius: 2px;
+  padding: 5px;
+  margin: 3px;
+}
+
+.sidebar {
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  height: 100%;
+  overflow: auto;
+  display: block;
+}
+
+.blue {
+  color: #5f9EA0;
+  font-size: 15px;
+}
+
+.delivery {
+  font-size: 15px;
+}
+
+@media screen and (max-width: 700px) {
+  .sidebar {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+  .sidebar {float: left;}
+  div.gallery {margin-left: 0;}
+}
+
+@media screen and (max-width: 400px) {
+  .sidebar  {
+    text-align: center;
+    float: none;
+  }
 }
